# auth-sdk

./: .gitignore  README.md
.github/workflows/: publish-npm.yml
go/auth/: auth.go  go.mod  go.sum
go/auth-core/: core.go  go.mod
go/auth-native/: authnative.go  go.mod
javascript/address-layout/: .gitignore  .npmignore  package.json  pnpm-lock.yaml  tsconfig.scripts.json
javascript/address-layout/scripts/: build-data.js  build-data.ts  import-layouts.js
javascript/address-layout/src/: formats.ts  index.ts  layouts.generated.ts  layouts.ts  types.ts  utils.ts
javascript/auth/: package.json
javascript/auth-dx/: package.json  tsconfig.json
javascript/auth-dx/src/: index.ts
javascript/auth-native/: package.json  tsconfig.json
javascript/auth-native/src/: device.ts  index.ts  oidc.ts  pkce.ts  types.ts
javascript/auth/src/: client.ts  events.ts  hint.ts  index.ts  onetap.ts  popup.ts  session.ts  silent.ts  types.ts
javascript/auth/src/react/: AuthPrompt.tsx  BinrcLoginButton.tsx  OneTapPrompt.tsx  RequireAuth.tsx  components.tsx  hooks.ts  index.ts
rust/auth/: Cargo.toml
rust/auth-core/: Cargo.toml
rust/auth-core/src/: lib.rs
rust/auth-native/: Cargo.toml
rust/auth-native/src/: device.rs  error.rs  lib.rs  oidc.rs  pkce.rs  types.rs
rust/auth/src/: config.rs  handlers.rs  lib.rs  middleware.rs  session.rs
scripts/: bump.sh
