[package]
name = "binrc-auth-core"
version = "0.1.0"
edition = "2021"
description = "Core cryptographic primitives and shared types for Binrc Auth"
publish = false

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm = "0.10"
base64 = "0.21"
rand = "0.8"
thiserror = "1.0"
