[package]
name = "binrc-auth-native"
version = "1.0.0"
edition = "2021"
description = "Binrc authentication SDK for native clients — Tauri, CLI, IoT. PKCE, OIDC code exchange, device flow polling."
license = "MIT"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["time"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
thiserror = "1"
url = "2"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
